--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,2 +1,7 @@
+@import "./partials/variables";
+@import "./partials/base";
+@import "./partials/nav";
+@import "./partials/typography";
+@import "./partials/forms";
+@import ".partials/buttons"
 
-@import "partials/nav"
