--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,5 +3,7 @@
 @import "./partials/nav";
 @import "./partials/typography";
 @import "./partials/forms";
-@import ".partials/buttons"
+@import "./partials/buttons";
+@import "./partials/circles.scss";
+@import "./partials/footer";
 
