--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,41 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+body {
+  background-color: #F2F2F2;
+}
+
+.nav-flex, nav .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+nav {
+  background: getColor(white);
+}
+
+nav a {
+  text-decoration: none;
+  color: getColor(text-black);
+}
+
+nav ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+a,
+p {
+  font-family: "open sans";
+}
+
+h1 {
+  font-family: "montserrat";
+}
+/*# sourceMappingURL=style.css.map */
